tests/od2trips/errors/format/vm/vm_not_square/errors.od2trips
Error: End of file while reading input_od_v.fma.
Quitting (on error).
